--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-terser": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/chance": "^1.1.3"
   }
 }
